--- a/admin/views/catalogos.html
+++ b/admin/views/catalogos.html
@@ -5,7 +5,7 @@
           <div class="col-xs-12">
             <section class="panel">
               <header class="panel-heading">
-                <h1>Catalogos</h1>
+                <h1>Catalogos</h1> 
                 <div class="pull-right">
                   <ul class="files">
                     <li><a href="index.php?ctrl=catalogos&action=create" class="btn btn-create"><i class="fa fa-plus"></i> Nuevo</a></li>
@@ -16,25 +16,25 @@
                   </ul>
                 </div>
               </header>
-              <div class="panel-body">
+              <div class="panel-body table-responsive">
                 <table id="bootstrap-table" class="table table-bordered table-hover table-condensed">
                   <thead>
                     <tr>
                       <th>#</th>
-                      <th>Código </th>
-                      <th>Nombre </th>
-                      <th>Fecha </th>
-                      <th>Categoría </th>
+                      <th>Código</th>
+                      <th>Nombre</th>
+                      <th class="hidden-xs hidden-sm hidden-md">Fecha</th>
+                      <th>Categoría</th>
                       <th class="no-link last"><span class="nobr">Acción</span></th>
                     </tr>
                   </thead>
                   <tfoot>
                     <tr>
                       <th>#</th>
-                      <th>Código </th>
-                      <th>Nombre </th>
-                      <th>Fecha </th>
-                      <th>Categoría </th>
+                      <th>Código</th>
+                      <th>Nombre</th>
+                      <th class="hidden-xs hidden-sm hidden-md">Fecha</th>
+                      <th>Categoría</th>
                       <th class=" no-link last"><span class="nobr">Acción</span></th>
                     </tr>
                   </tfoot>
@@ -45,7 +45,7 @@
                       <td>{{id}}</td>
                       <td>{{codigo}}</td>
                       <td>{{nombre}}</td>
-                      <td>{{fecha}}</td>
+                      <td class="hidden-xs hidden-sm hidden-md">{{fecha}}</td>
                       <td>{{categoria}}</td>
                       <td>
                         <a href="{{catalogo-view}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
