--- a/admin/views/colores.html
+++ b/admin/views/colores.html
@@ -16,7 +16,7 @@
                   </ul>
                 </div>
               </header>
-              <div class="panel-body">
+              <div class="panel-body table-responsive">
                 <table id="bootstrap-table" class="table table-bordered table-hover table-condensed">
                   <thead>
                     <tr>
