--- a/admin/views/productos.html
+++ b/admin/views/productos.html
@@ -15,67 +15,65 @@
                     </ul>
                   </div>
                 </header>
-                <div class="panel-body">
-                  <div class="table-responsive">
-                    <table id="bootstrap-table" class="table table-bordered table-hover table-condensed">
-                      <thead>
-                        <tr>
-                          <th>#</th>
-                          <th>Código</th>
-                          <th>Modelo</th>
-                          <th>Nombre</th>
-                          <th>Categoria</th>
-                          <th>Subcategoria</th>
-                          <th>Color </th>
-                          <th>Material</th>
-                          <th>Marca</th>
-                          <th>Altura</th>
-                          <th>Precio</th>
-                          <th class=" no-link last"><span class="nobr">Acción</span></th>
-                        </tr>
-                      </thead>
-                      <tfoot>
-                        <tr>
-                          <th>#</th>
-                          <th>Código</th>
-                          <th>Modelo</th>
-                          <th>Nombre</th>
-                          <th>Categoria</th>
-                          <th>Subcategoria</th>
-                          <th>Color </th>
-                          <th>Material</th>
-                          <th>Marca</th>
-                          <th>Altura</th>
-                          <th>Precio</th>
-                          <th class=" no-link last"><span class="nobr">Acción</span></th>
-                        </tr>
-                      </tfoot>
-                      <!--table.tbody-->
-                      <tbody>
-                        <!--row-->
-                        <tr>
-                          <td>{{id}}</td>
-                          <td>{{codigo}}</td>
-                          <td>{{modelo}}</td>
-                          <td>{{nombre}}</td>
-                          <td>{{categoria}}</td>
-                          <td>{{subcategoria}}</td>
-                          <td><img src="{{color}}"/></td>
-                          <td>{{material}}</td>
-                          <td>{{marca}}</td>
-                          <td>{{altura}}</td>
-                          <td>{{precio}}</td>
-                          <td>
-                            <a href="{{producto-view}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
-                            <a href="{{producto-edit}}" class="btn btn-edit"><i class="fa fa-pencil"></i></a>
-                            <a href="#" class="btn btn-delete" id="{{id}}" data-toggle="modal" data-target="#delete-item"><i class="fa fa-trash-o"></i></a>
-                          </td>
-                        </tr>
-                        <!--.row-->
-                      </tbody>
-                      <!--.table.tbody-->
-                    </table>
-                  </div>
+                <div class="panel-body table-responsive">
+                  <table id="bootstrap-table" class="table table-bordered table-hover table-condensed">
+                    <thead>
+                      <tr>
+                        <th>#</th>
+                        <th>Código</th>
+                        <th>Modelo</th>
+                        <th>Nombre</th>
+                        <th class="hidden-xs hidden-sm hidden-md">Categoria</th>
+                        <th class="hidden-xs hidden-sm hidden-md">Subcategoria</th>
+                        <th class="hidden-xs">Color</th>
+                        <th class="hidden-xs hidden-sm hidden-md">Material</th>
+                        <th class="hidden-xs hidden-sm hidden-md">Marca</th>
+                        <th class="hidden-xs hidden-sm hidden-md">Altura</th>
+                        <th class="hidden-xs">Precio</th>
+                        <th class=" no-link last"><span class="nobr">Acción</span></th>
+                      </tr>
+                    </thead>
+                    <tfoot>
+                      <tr>
+                        <th>#</th>
+                        <th>Código</th>
+                        <th>Modelo</th>
+                        <th>Nombre</th>
+                        <th class="hidden-xs hidden-sm hidden-md">Categoria</th>
+                        <th class="hidden-xs hidden-sm hidden-md">Subcategoria</th>
+                        <th class="hidden-xs">Color</th>
+                        <th class="hidden-xs hidden-sm hidden-md">Material</th>
+                        <th class="hidden-xs hidden-sm hidden-md">Marca</th>
+                        <th class="hidden-xs hidden-sm hidden-md">Altura</th>
+                        <th class="hidden-xs">Precio</th>
+                        <th class=" no-link last"><span class="nobr">Acción</span></th>
+                      </tr>
+                    </tfoot>
+                    <!--table.tbody-->
+                    <tbody>
+                      <!--row-->
+                      <tr>
+                        <td>{{id}}</td>
+                        <td>{{codigo}}</td>
+                        <td>{{modelo}}</td>
+                        <td>{{nombre}}</td>
+                        <td class="hidden-xs hidden-sm hidden-md">{{categoria}}</td>
+                        <td class="hidden-xs hidden-sm hidden-md">{{subcategoria}}</td>
+                        <td class="hidden-xs"><img src="{{color}}"/></td>
+                        <td class="hidden-xs hidden-sm hidden-md">{{material}}</td>
+                        <td class="hidden-xs hidden-sm hidden-md">{{marca}}</td>
+                        <td class="hidden-xs hidden-sm hidden-md">{{altura}}</td>
+                        <td class="hidden-xs">{{precio}}</td>
+                        <td>
+                          <a href="{{producto-view}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
+                          <a href="{{producto-edit}}" class="btn btn-edit"><i class="fa fa-pencil"></i></a>
+                          <a href="#" class="btn btn-delete" id="{{id}}" data-toggle="modal" data-target="#delete-item"><i class="fa fa-trash-o"></i></a>
+                        </td>
+                      </tr>
+                      <!--.row-->
+                    </tbody>
+                    <!--.table.tbody-->
+                  </table>
                 </div>
               </section>
             </div>
