--- a/admin/views/subcategorias.html
+++ b/admin/views/subcategorias.html
@@ -15,25 +15,25 @@
                     </ul>
                   </div>
                 </header>
-                <div class="panel-body">
+                <div class="panel-body table-responsive">
                   <table id="bootstrap-table" class="table table-bordered table-hover table-condensed">
                     <thead>
                       <tr>
                         <th>#</th>
-                        <th>Código </th>
-                        <th>Nombre </th>
-                        <th>Categoría </th>
-                        <th>Descripción </th>
+                        <th>Código</th>
+                        <th>Nombre</th>
+                        <th class="hidden-xs hidden-sm">Categoría</th>
+                        <th class="hidden-xs hidden-sm hidden-md">Descripción</th>
                         <th class=" no-link last"><span class="nobr">Acción</span></th>
                       </tr>
                     </thead>
                     <tfoot>
                       <tr>
                         <th>#</th>
-                        <th>Código </th>
-                        <th>Nombre </th>
-                        <th>Categoría </th>
-                        <th>Descripción </th>
+                        <th>Código</th>
+                        <th>Nombre</th>
+                        <th class="hidden-xs hidden-sm">Categoría</th>
+                        <th class="hidden-xs hidden-sm hidden-md">Descripción</th>
                         <th class=" no-link last"><span class="nobr">Acción</span></th>
                       </tr>
                     </tfoot>
@@ -44,8 +44,8 @@
                         <td>{{id}}</td>
                         <td>{{codigo}}</td>
                         <td>{{nombre}}</td>
-                        <td>{{categoria}}</td>
-                        <td>{{descripcion}}</td>
+                        <td class="hidden-xs hidden-sm">{{categoria}}</td>
+                        <td class="hidden-xs hidden-sm hidden-md">{{descripcion}}</td>
                         <td>
                           <a href="{{subcategoria-view}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
                           <a href="{{subcategoria-edit}}" class="btn btn-edit"><i class="fa fa-pencil"></i></a>
