--- a/admin/views/producto-view.html
+++ b/admin/views/producto-view.html
@@ -14,8 +14,9 @@
                         <img src="../img/200x200.png" alt="producto" />
                       </div>
                     </div>
-                  </div><br>
-                  <table class="table table-hover">
+                  </div>
+                  <div class="row">
+                    <table class="table table-hover">
                     <tbody>
                       <tr>
                         <th scope="row">ID :</th>
@@ -29,6 +30,12 @@
                         <th scope="row">Modelo :</th>
                         <td>{{modelo}}</td>
                       </tr>
+                    </tbody>
+                  </table>
+                  </div>
+                  <div class="row">
+                    <table class="table table-hover">
+                    <tbody>
                       <tr>
                         <th scope="row">Tallas</th>
                         <th scope="row">Stock</th>
@@ -41,6 +48,7 @@
                       <!--.talla-->
                     </tbody>
                   </table>
+                  </div>
                 </div>
 
                 <div class="col-lg-8 col-md-7 col-sm-6 col-xs-12"> 
