--- a/admin/views/navigation.html
+++ b/admin/views/navigation.html
@@ -92,7 +92,7 @@
                 </li>
                 <li>
                   <a href="index.php?ctrl=productos">
-                    <i class="fa fa-black-tie"></i> 
+                    <i class="fa fa-gift"></i> 
                     <span class="hidden-xs">Productos</span>
                   </a>
                 </li>
@@ -116,13 +116,13 @@
                 </li>
                 <li>
                   <a href="index.php?ctrl=ofertas">
-                    <i class="fa fa-gift"></i> 
+                    <i class="fa fa-usd"></i> 
                     <span class="hidden-xs">Ofertas</span>
                   </a>
                 </li>
                 <li>
                   <a href="index.php?ctrl=descuentos">
-                    <i class="fa fa-dollar"></i> 
+                    <i class="fa fa-percent">%</i>
                     <span class="hidden-xs">Descuentos</span>
                   </a>
                 </li>
