--- a/admin/views/producto-view.html
+++ b/admin/views/producto-view.html
@@ -4,34 +4,16 @@
           <div class="col-xs-12">
             <section class="panel">
               <header class="panel-heading">
-                <h1>Producto</h1>
+                <h1>Producto</h1> 
               </header>
               <div class="panel-body">
                 <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
                   <div class="profile_img">
                     <div id="crop-avatar">
                       <div>
-                        <img src="../img/200x200.png" alt="producto" />
+                        <img src="{{image}}" alt="producto"/>
                       </div>
                     </div>
-                  </div>
-                  <div class="row">
-                    <table class="table table-hover">
-                    <tbody>
-                      <tr>
-                        <th scope="row">ID :</th>
-                        <td>{{id}}</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Código :</th>
-                        <td>{{codigo}}</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Modelo :</th>
-                        <td>{{modelo}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
                   </div>
                   <div class="row">
                     <table class="table table-hover">
@@ -54,6 +36,18 @@
                 <div class="col-lg-8 col-md-7 col-sm-6 col-xs-12"> 
                   <table class="table table-hover">
                     <tbody>
+                      <tr>
+                        <th scope="row">ID :</th>
+                        <td>{{id}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Código :</th>
+                        <td>{{codigo}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Modelo :</th>
+                        <td>{{modelo}}</td>
+                      </tr>
                       <tr>
                         <th scope="row">Nombre :</th>
                         <td>{{nombre}}</td>
