quitar clase thumbnail y readme

--- a/admin/views/color-view.html
+++ b/admin/views/color-view.html
@@ -12,7 +12,7 @@
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img src="{{image}}" alt="color" class="img-thumbnail">
+                          <img src="{{image}}" alt="color"/>
                         </div>
                       </div>
                     </div>
