--- a/admin/views/descuento-edit.html
+++ b/admin/views/descuento-edit.html
@@ -12,7 +12,7 @@
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img id="image-file" src="{{image}}" alt="descuento" data-image>
+                          <img id="image-file" src="{{image}}" alt="descuento" data-image/>
                         </div>
                       </div>
                     </div>
