quitar clase thumbnail

--- a/admin/views/categoria-view.html
+++ b/admin/views/categoria-view.html
@@ -12,7 +12,7 @@
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img src="{{image}}" alt="categoria">
+                          <img src="{{image}}" alt="categoria"/>
                         </div>
                       </div>
                     </div>
