--- a/admin/views/subcategoria-view.html
+++ b/admin/views/subcategoria-view.html
@@ -11,7 +11,7 @@
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img src="{{image}}" alt="subcategoria">
+                          <img src="{{image}}" alt="subcategoria"/>
                         </div>
                       </div>
                     </div>
