--- a/admin/views/usuario-edit.html
+++ b/admin/views/usuario-edit.html
@@ -12,7 +12,7 @@
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img id="thumbnail-file" src="{{image}}" alt="usuario" data-thumbnail>
+                          <img id="thumbnail-file" src="{{image}}" alt="usuario" data-thumbnail/>
                         </div>
                       </div>
                     </div>
