--- a/admin/views/oferta-view.html
+++ b/admin/views/oferta-view.html
@@ -11,7 +11,7 @@
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img src="{{image}}" alt="oferta" class="img-thumbnail">
+                          <img src="{{image}}" alt="oferta"/>
                         </div>
                       </div>
                     </div>
