--- a/admin/views/usuario-view.html
+++ b/admin/views/usuario-view.html
@@ -11,7 +11,7 @@
                   <div class="form-group profile_img">
                     <div id="crop-avatar">
                       <div>
-                        <img src="{{image}}" alt="usuario" class="img-thumbnail">
+                        <img src="{{image}}" alt="usuario"/>
                       </div>
                     </div>
                   </div>
