--- a/admin/views/producto-view.html
+++ b/admin/views/producto-view.html
@@ -15,22 +15,6 @@
                       </div>
                     </div>
                   </div>
-                  <div class="row">
-                    <table class="table table-hover">
-                    <tbody>
-                      <tr>
-                        <th scope="row">Tallas</th>
-                        <th scope="row">Stock</th>
-                      </tr>
-                      <!--talla-->
-                      <tr>
-                        <td>{{talla}}</td>
-                        <td>{{stock}}</td>
-                      </tr>
-                      <!--.talla-->
-                    </tbody>
-                  </table>
-                  </div>
                 </div>
 
                 <div class="col-lg-8 col-md-7 col-sm-6 col-xs-12"> 
@@ -99,6 +83,34 @@
             </div>
           </section>
         </div>
+        <div class="row">
+          <div class="col-md-6">
+            <section class="panel">
+              <header class="panel-heading">
+                <h3 class="text-red">Tallas</h3>
+              </header>
+              <div class="panel-body">
+                <div class="row">
+                  <div class="">
+                    <table class="table table-hover">
+                      <tbody>
+                        <tr>
+                          <th scope="row">Tallas</th>
+                          <th scope="row">Stock</th>
+                        </tr>
+                        <!--talla-->
+                        <tr>
+                          <td>{{talla}}</td>
+                          <td>{{stock}}</td>
+                        </tr>
+                        <!--.talla-->
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
       </div>
     </div>
-
