--- a/css/styles.css
+++ b/css/styles.css
@@ -61,18 +61,30 @@ section {
 
 .catalogo figure img {
   width: 100%;
+  transition: all 0.2s linear;
 }
 
 .catalogo .overlay {
-  background: rgba(0,0,0,.7);
   position: absolute;
   top: 0;
   left: 0;
   padding: 0;
-  transition: opacity .5s;
   width: 255px;
   height: 330px;
+
+  opacity: 0;
+  background-color: rgba(0,0,0,.7);
+  transition: all 0.3s ease-in-out;
 }
+
+.catalogo:hover img {
+  transform: scale(1.1);
+}
+
+.catalogo:hover .overlay {
+  opacity: 1;
+}
+
 
 .catalogo .overlay ul {
   padding: 45px;
@@ -545,6 +557,13 @@ section {
   background: #000;
 }
 
+#error-page {/*
+  margin-top: 180px;
+  margin-bottom: 180px;
+  */
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
 
 
 #terminos {
