Vistas Menu, Home, Contacto Privacidad conexión con BD

--- a/views/menu.html
+++ b/views/menu.html
@@ -35,34 +35,27 @@
       <ul class="nav navbar-nav">
         <li><a class="active" href="index.php">Home <span class="sr-only">(current)</span></a></li>
         <li class="dropdown">
-          <a href="index.php?ctrl=productos&action=list" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dama <i class="fa fa-chevron-down"></i></a>
+          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dama <i class="fa fa-chevron-down"></i></a>
           <ul class="dropdown-menu">
-            <li><a href="index.php?ctrl=productos&action=list&category=zapatilla">Zapatilla</a></li>
-            <li><a href="index.php?ctrl=productos&action=list&category=bota">Bota</a></li>
-            <li><a href="index.php?ctrl=productos&action=list&category=sandalia">Sandalia</a></li>
-            <li><a href="index.php?ctrl=productos&action=list&category=flat">Flat</a></li>
-            <li><a href="index.php?ctrl=productos&action=list&category=deportivo">Deportivo</a></li>
-            <li><a href="index.php?ctrl=productos&action=list&category=pantunfla">Pantunfla</a></li>
+            <!--subcategoria-dama-->
+            <li><a href="{{subcategoria_url}}">{{subcategoria}}</a></li>
+            <!--.subcategoria-dama-->
           </ul>
         </li>
         <li class="dropdown">
-          <a href="index.php?ctrl=productos&action=list" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Caballero <i class="fa fa-chevron-down"></i></a>
+          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Caballero <i class="fa fa-chevron-down"></i></a>
           <ul class="dropdown-menu">
-            <li><a href="index.php?ctrl=productos&action=list&category=bota">Bota</a></li>
-            <li><a href="index.php?ctrl=productos&action=list&category=sandalia">Sandalia</a></li>
-            <li><a href="index.php?ctrl=productos&action=list&category=deportivo">Deportivo</a></li>
-            <li><a href="index.php?ctrl=productos&action=list&category=pantunfla">Pantunfla</a></li>
+            <!--subcategoria-caballero-->
+            <li><a href="{{subcategoria_url}}">{{subcategoria}}</a></li>
+            <!--.subcategoria-caballero-->
           </ul>
         </li>
         <li class="dropdown">
-          <a href="index.php?ctrl=productos&action=list" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Infantil <i class="fa fa-chevron-down"></i></a>
+          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Infantil <i class="fa fa-chevron-down"></i></a>
           <ul class="dropdown-menu">
-            <li><a href="index.php?ctrl=productos&action=list&category=zapatilla">Zapatilla</a></li>
-            <li><a href="index.php?ctrl=productos&action=list&category=bota">Bota</a></li>
-            <li><a href="index.php?ctrl=productos&action=list&category=sandalia">Sandalia</a></li>
-            <li><a href="index.php?ctrl=productos&action=list&category=flat">Flat</a></li>
-            <li><a href="index.php?ctrl=productos&action=list&category=deportivo">Deportivo</a></li>
-            <li><a href="index.php?ctrl=productos&action=list&category=pantunfla">Pantunfla</a></li>
+            <!--subcategoria-infantil-->
+            <li><a href="{{subcategoria_url}}">{{subcategoria}}</a></li>
+            <!--.subcategoria-infantil-->
           </ul>
         </li>
         <li><a href="index.php?ctrl=contacto">Contacto</a></li>
